--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="UXCoreDemo"></div>
-    <!--script src="./demo/tinymce.min.js"></script-->
+    <script src="./demo/tinymce.min.js"></script>
     <script src="./node_modules/console-polyfill/index.js"></script>
     <script src="./node_modules/es5-shim/es5-shim.min.js"></script>
     <script src="./node_modules/es5-shim/es5-sham.min.js"></script>
