add image upload plugin

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="UXCoreDemo"></div>
     <script src="./demo/tinymce.min.js"></script>
+    <script src="./demo/plugins/upload/uploader.js"></script>
     <script src="./node_modules/console-polyfill/index.js"></script>
     <script src="./node_modules/es5-shim/es5-shim.min.js"></script>
     <script src="./node_modules/es5-shim/es5-sham.min.js"></script>
