--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="//alinw.alicdn.com/??platform/common/s/1.1/global/global.css">
 </head>
 <body>
-    <div id="UXCoreDemo"></div>
+    <br><br><br><br>
+    <div id="UXCoreDemo" style="margin-left: 50px;"></div>
     <script src="./demo/tinymce.min.js"></script>
     <script src="./demo/plugins/upload/uploader.js"></script>
     <script src="./node_modules/console-polyfill/index.js"></script>
