--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>uxcore-tinymce</title>
-    <link rel="stylesheet" href="./node_modules/uxcore-kuma/dist/uxcore-kuma.css">
+    <link rel="stylesheet" href="./node_modules/uxcore-kuma/dist/kuma.css">
     <link rel="stylesheet" href="./src/Tinymce.css">
     <link rel="stylesheet" href="./dist/demo.css">
     <link rel="stylesheet" type="text/css" href="//alinw.alicdn.com/??platform/common/s/1.1/global/global.css">
@@ -16,6 +16,7 @@
     <script src="./node_modules/es5-shim/es5-shim.min.js"></script>
     <script src="./node_modules/es5-shim/es5-sham.min.js"></script>
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
+    <script src="http://g.alicdn.com/uxcore/uxcore-lib/react/0.14.0/react-dom.js"></script>
     <script src="./dist/demo.js"></script>
 </body>
 </html>
