--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <br><br><br><br>
     <div id="UXCoreDemo" style="margin-left: 50px;"></div>
-    <script src="./demo/tinymce.min.js"></script>
+    <!--script src="./demo/tinymce.min.js"></script-->
     <script src="./demo/plugins/upload/uploader.js"></script>
     <script src="./node_modules/console-polyfill/index.js"></script>
     <script src="./node_modules/es5-shim/es5-shim.min.js"></script>
     <script src="./node_modules/es5-shim/es5-sham.min.js"></script>
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
     <script src="http://g.alicdn.com/uxcore/uxcore-lib/react/0.14.0/react-dom.js"></script>
+    <script src="//g-assets.daily.taobao.net/uxcore/uxcore-lib/tinymce/4.2.5/tinymce-basic.min.js"></script>
     <script src="./dist/demo.js"></script>
 </body>
 </html>
