--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./node_modules/es5-shim/es5-sham.min.js"></script>
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
     <script src="http://g.alicdn.com/uxcore/uxcore-lib/react/0.14.0/react-dom.js"></script>
-    <script src="//g-assets.daily.taobao.net/uxcore/uxcore-lib/tinymce/4.2.5/tinymce-basic.min.js"></script>
+    <script src="//g.alicdn.com/uxcore/uxcore-lib/tinymce/4.2.5/tinymce-basic.min.js"></script>
     <script src="./dist/demo.js"></script>
 </body>
 </html>
