--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <br><br><br><br>
     <div id="UXCoreDemo" style="margin-left: 50px;"></div>
     <script src="./node_modules/console-polyfill/index.js"></script>
-    <script src="./node_modules/es5-shim/es5-shim.min.js"></script>
-    <script src="./node_modules/es5-shim/es5-sham.min.js"></script>
-    <script src="./node_modules/react/dist/react-with-addons.js"></script>
-    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="./node_modules/babel-polyfill/dist/polyfill.min.js"></script>
+        <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
     <script src="//g.alicdn.com/platform/c/tinymce/4.3.12/tinymce.min.js"></script>
     <script src="./dist/demo.js"></script>
 </body>
